<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_user"
        android:title="@string/edit_user_fragment_user"
        yourapp:actionViewClass="android.widget.Spinner"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_graph_param_time"
        android:icon="@drawable/ic_time_period"
        android:title="@string/graphs_fragment_period_tag"
        yourapp:showAsAction="always">
        <menu>
            <item
                android:id="@+id/graph_time_week"
                android:title="@string/graphs_fragment_period_week"/>
            <item
                android:id="@+id/graph_time_two_weeks"
                android:title="@string/graphs_fragment_period_two_weeks"/>
            <item
                android:id="@+id/graph_time_month"
                android:title="@string/graphs_fragment_period_month"/>
            <item
                android:id="@+id/graph_time_six_weeks"
                android:title="@string/graphs_fragment_period_six_weeks"/>
            <item
                android:id="@+id/graph_time_two_months"
                android:title="@string/graphs_fragment_period_two_months"/>
            <item
                android:id="@+id/graph_time_four_months"
                android:title="@string/graphs_fragment_period_four_months"/>
            <item
                android:id="@+id/graph_time_half_year"
                android:title="@string/graphs_fragment_period_half_year"/>
            <item
                android:id="@+id/graph_time_year"
                android:title="@string/graphs_fragment_period_year"/>
            <item
                android:id="@+id/graph_time_two_years"
                android:title="@string/graphs_fragment_period_two_years"/>
            <item
                android:id="@+id/graph_time_always"
                android:title="@string/graphs_fragment_period_always"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_graph_param"
        android:icon="@drawable/ic_weight"
        android:title="@string/graphs_fragment_measure_tag"
        yourapp:showAsAction="always">
        <menu>
            <item
                android:id="@+id/graph_weight"
                android:title="@string/weight_fragment_icon_desc_weight"
                android:icon="@drawable/ic_weight"/>
            <item
                android:id="@+id/graph_bmi"
                android:title="@string/weight_fragment_bmi_tag"
                android:icon="@drawable/ic_bmi"/>
            <item
                android:id="@+id/graph_percentFat"
                android:title="@string/weight_fragment_icon_desc_percentFat"
                android:icon="@drawable/ic_percent_fat"/>
            <item
                android:id="@+id/graph_percentHydration"
                android:title="@string/weight_fragment_icon_desc_percentHydration"
                android:icon="@drawable/ic_percent_hydration"/>
            <item
                android:id="@+id/graph_boneMass"
                android:title="@string/weight_fragment_icon_desc_boneMass"
                android:icon="@drawable/ic_bone_mass"/>
            <item
                android:id="@+id/graph_muscleMass"
                android:title="@string/weight_fragment_icon_desc_muscleMass"
                android:icon="@drawable/ic_muscle_mass"/>
            <item
                android:id="@+id/graph_physiqueRating"
                android:title="@string/weight_fragment_icon_desc_physiqueRating"
                android:icon="@drawable/ic_physique_rating"/>
            <item
                android:id="@+id/graph_visceralFatRating"
                android:title="@string/weight_fragment_icon_desc_visceralFat"
                android:icon="@drawable/ic_visceral_fat_rating"/>
            <item
                android:id="@+id/graph_metabolicAge"
                android:title="@string/weight_fragment_icon_desc_metabolicAge"
                android:icon="@drawable/ic_metabolic_age"/>
            <item
                android:id="@+id/graph_activeMet"
                android:title="@string/weight_fragment_icon_desc_activeMet"
                android:icon="@drawable/ic_metabolic"/>
            <item
                android:id="@+id/graph_basalMet"
                android:title="@string/weight_fragment_icon_desc_basalMet"
                android:icon="@drawable/ic_metabolic"/>
            <item
                android:id="@+id/graph_trunkFatPercent"
                android:title="@string/graphs_fragment_measurement_trunk_percent_fat"
                android:icon="@drawable/ic_trunk"/>
            <item
                android:id="@+id/graph_trunkMuscleMass"
                android:title="@string/graphs_fragment_measurement_trunk_muscle_mass"
                android:icon="@drawable/ic_trunk"/>
            <item
                android:id="@+id/graph_leftArmFatPercent"
                android:title="@string/graphs_fragment_measurement_left_arm_percent_fat"
                android:icon="@drawable/ic_left_arm"/>
            <item
                android:id="@+id/graph_leftArmMuscleMass"
                android:title="@string/graphs_fragment_measurement_left_arm_muscle_mass"
                android:icon="@drawable/ic_left_arm"/>
            <item
                android:id="@+id/graph_rightArmFatPercent"
                android:title="@string/graphs_fragment_measurement_right_arm_percent_fat"
                android:icon="@drawable/ic_right_arm"/>
            <item
                android:id="@+id/graph_rightArmMuscleMass"
                android:title="@string/graphs_fragment_measurement_right_arm_muscle_mass"
                android:icon="@drawable/ic_right_arm"/>
            <item
                android:id="@+id/graph_leftLegFatPercent"
                android:title="@string/graphs_fragment_measurement_left_leg_percent_fat"
                android:icon="@drawable/ic_left_leg"/>
            <item
                android:id="@+id/graph_leftLegMuscleMass"
                android:title="@string/graphs_fragment_measurement_left_leg_muscle_mass"
                android:icon="@drawable/ic_left_leg"/>
            <item
                android:id="@+id/graph_rightLegFatPercent"
                android:title="@string/graphs_fragment_measurement_right_leg_percent_fat"
                android:icon="@drawable/ic_right_leg"/>
            <item
                android:id="@+id/graph_rightLegMuscleMass"
                android:title="@string/graphs_fragment_measurement_right_leg_muscle_mass"
                android:icon="@drawable/ic_right_leg"/>
        </menu>

    </item>

</menu>