<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_user"
        android:title="@string/edit_user_fragment_user"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_export_history"
        android:icon="@drawable/ic_action_save"
        android:title="@string/history_fragment_action_export"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/action_export_history_csv"
                android:title="@string/history_fragment_action_export_csv" />
        </menu>
    </item>
    <item
        android:id="@+id/action_download_history"
        android:icon="@drawable/ic_action_download"
        android:title="@string/history_fragment_action_download"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/action_download_history_gc"
                android:title="@string/edit_user_fragment_garmin_connect_category" />
        </menu>
    </item>
    <item
        android:id="@+id/action_jump_to_date"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/history_fragment_action_jump_to"
        app:showAsAction="ifRoom" />
</menu>
