<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_user"
        android:title="@string/edit_user_fragment_user"
        yourapp:actionViewClass="android.widget.Spinner"
        yourapp:showAsAction="always"/>
    <item
        android:id="@+id/action_weight"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/weight_fragment_action_weight"
        yourapp:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_weight_upload"
        android:icon="@drawable/ic_action_upload"
        android:title="@string/weight_fragment_action_upload"
        yourapp:showAsAction="ifRoom|withText"/>
</menu>